<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2010 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
  
          http://www.apache.org/licenses/LICENSE-2.0
  
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASI
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">APP Store</string>
    <string name="rss_reader_activity">APP STORE</string>
    <string name="status">status</string>
    <string name="system_instruction">App Store Login</string>
    <string name="account_name">Account:</string>
    <string name="account_pwd">Password:</string>
    <string name="done_action">Done</string>
    <string name="cancel_action">Cancel</string>
    <string name="check_user">checking user...</string>
    <string name="load_app_data">Loading APP Data...</string>
    <string name="check_user_fail">Check User Fail</string>
    <string name="load_app_fail">Load App Fail</string>
    <string name="server_ip_addr">Server IP:</string>
    <string name="server_port">Server Port:</string>
    <string name="set_server_ip_port">Set Server IP and Port</string>
    <string name="server_setting">Server Settings</string>
    <string name="user_login">User Log In</string>
    <string name="check_user_rights">Check User</string>
    <string name="user_directory">Show User App Directory</string>
    <string name="status_download">Download</string>
    <string name="status_installed">Installed</string>
    <string name="status_update">Upgrade</string>
    <string name="status_notinstall">Not Installed</string>
    <string name="status_pause">Pause</string>
    <string name="current_ver_tag">Current:</string>
    <string name="no_install_tag">Not Installed</string>
</resources>
